@@ -7,7 +7,7 @@
 
     <groupId>de.mediathekview</groupId>
     <artifactId>MediathekView</artifactId>
-    <version>14.0.1</version>
+    <version>14.3.0</version>
     <packaging>jar</packaging>
 
     <name>${project.groupId}:${project.artifactId}</name>
@@ -76,34 +76,42 @@
                 <enabled>true</enabled>
             </snapshots>
         </repository>
+        <repository>
+            <id>Maven2</id>
+            <url>https://repo.maven.apache.org/maven2/</url>
+        </repository>
     </repositories>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <jdk.language.version>21</jdk.language.version>
         <kotlin.language.target>21</kotlin.language.target>
-        <kotlin.version>1.9.21</kotlin.version>
+        <jvm.target.version>21</jvm.target.version>
+
+        <kotlin.version>2.1.10</kotlin.version>
         <kotlin.compiler.incremental>true</kotlin.compiler.incremental>
 
         <maven.compiler.source>${jdk.language.version}</maven.compiler.source>
-        <maven.compiler.target>${jdk.language.version}</maven.compiler.target>
+        <maven.compiler.target>${jvm.target.version}</maven.compiler.target>
 
-        <annotations.version>24.0.1</annotations.version>
-        <assertj-core.version>3.24.2</assertj-core.version>
-        <commons-configuration2.version>2.9.0</commons-configuration2.version>
+        <annotations.version>24.1.0</annotations.version>
+        <assertj-core.version>3.26.3</assertj-core.version>
+        <commons-configuration2.version>2.11.0</commons-configuration2.version>
         <commons-io.version>2.11.0</commons-io.version>
-        <commons-lang3.version>3.12.0</commons-lang3.version>
-        <controlsfx.version>11.2.0</controlsfx.version>
-        <flatlaf.version>3.2.5</flatlaf.version>
-        <guava.version>33.0.0-jre</guava.version>
+        <commons-lang3.version>3.17.0</commons-lang3.version>
+        <controlsfx.version>11.2.2</controlsfx.version>
+        <flatlaf.version>3.5.4</flatlaf.version>
+        <guava.version>33.4.0-jre</guava.version>
+        <icu4j.version>76.1</icu4j.version>
         <install4j-maven-plugin.version>1.1.2</install4j-maven-plugin.version>
-        <jackson.version>2.15.2</jackson.version>
-        <jaffree.version>2023.09.10</jaffree.version>
-        <javafx.version>21.0.1</javafx.version>
+        <jackson.version>2.18.0</jackson.version>
+        <jaffree.version>2024.08.29</jaffree.version>
+        <javafx.version>23.0.1</javafx.version>
         <javax.transaction-api.version>1.3</javax.transaction-api.version>
-        <jna.version>5.13.0</jna.version>
-        <junit.jupiter.version>5.9.2</junit.jupiter.version>
-        <log4j2.version>2.20.0</log4j2.version>
+        <jna.version>5.16.0</jna.version>
+        <junit.jupiter.version>5.10.3</junit.jupiter.version>
+        <lucene.version>10.1.0</lucene.version>
+        <log4j2.version>2.24.3</log4j2.version>
         <maven-assembly-plugin.version>3.6.0</maven-assembly-plugin.version>
         <maven-clean-plugin.version>3.1.0</maven-clean-plugin.version>
         <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
@@ -115,37 +123,39 @@
         <maven-shade-plugin.version>3.2.4</maven-shade-plugin.version>
         <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
         <maven-surefire-plugin.version>3.0.0-M5</maven-surefire-plugin.version>
-        <miglayout.version>11.1</miglayout.version>
-        <mockito.version>5.2.0</mockito.version>
-        <okhttp.version>5.0.0-alpha.12</okhttp.version>
-        <picocli.version>4.7.5</picocli.version>
-        <sqlite-jdbc.version>3.44.1.0</sqlite-jdbc.version>
-        <xz.version>1.9</xz.version>
+        <miglayout.version>11.3</miglayout.version>
+        <mockito.version>5.12.0</mockito.version>
+        <okhttp.version>5.0.0-alpha.14</okhttp.version>
+        <picocli.version>4.7.6</picocli.version>
+        <sqlite-jdbc.version>3.48.0.0</sqlite-jdbc.version>
+        <xz.version>1.10</xz.version>
 
         <mainclass>mediathek.Main</mainclass>
 
-        <!-- Zulu without JavaFX is used on Linux and Windows -->
-        <install4j.zulu.jdk.version>21/21.0.1</install4j.zulu.jdk.version>
-        <install4j.jdk.min-version>21</install4j.jdk.min-version>
+        <install4j.version>11.0.2</install4j.version>
+        <install4j.home>./install4j${install4j.version}</install4j.home>
+        <!--suppress UnresolvedMavenProperty -->
+        <install4j.licenseKey>${env.LICENSE_KEY_11}</install4j.licenseKey>
+        <install4j.jdk.min-version>23</install4j.jdk.min-version>
 
         <!-- VM Parameters Windows x64 -->
         <install4j.vmparameters.win.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact -XX:MaxRAMPercentage=50.0
-            -XX:+UseStringDeduplication -Dfile.encoding=UTF-8 -DexternalUpdateCheck
+            -XX:+UseStringDeduplication --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector -DexternalUpdateCheck
         </install4j.vmparameters.win.64>
         <!-- VM Parameters Linux 64bit Intel and ARM -->
         <install4j.vmparameters.linux.64>-XX:+UseShenandoahGC -XX:ShenandoahGCHeuristics=compact
-            -XX:MaxRAMPercentage=50.0 -XX:+UseStringDeduplication --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
-            -Dfile.encoding=UTF-8 -DexternalUpdateCheck
+            -XX:MaxRAMPercentage=50.0 -XX:+UseStringDeduplication --enable-native-access=ALL-UNNAMED --add-modules jdk.incubator.vector --add-opens java.desktop/sun.awt.X11=ALL-UNNAMED
+            -DexternalUpdateCheck
         </install4j.vmparameters.linux.64>
-
-        <install4j.home>./install4j${install4j.version}</install4j.home>
-        <!--suppress UnresolvedMavenProperty -->
-        <install4j.licenseKey>${env.LICENSE_KEY_10}</install4j.licenseKey>
-        <install4j.version>10.0.5</install4j.version>
-        <lucene.version>9.7.0</lucene.version>
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.ibm.icu</groupId>
+            <artifactId>icu4j</artifactId>
+            <version>${icu4j.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.github.lgooddatepicker</groupId>
             <artifactId>LGoodDatePicker</artifactId>
@@ -162,17 +172,23 @@
             <artifactId>lucene-queryparser</artifactId>
             <version>${lucene.version}</version>
         </dependency>
-
         <dependency>
-            <groupId>com.install4j</groupId>
-            <artifactId>install4j-runtime</artifactId>
-            <version>${install4j.version}</version>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-analysis-common</artifactId>
+            <version>${lucene.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>lucene-queries</artifactId>
+            <version>${lucene.version}</version>
+        </dependency>
+
+
 
         <dependency>
             <groupId>org.jfree</groupId>
             <artifactId>jfreechart</artifactId>
-            <version>1.5.4</version>
+            <version>1.5.5</version>
         </dependency>
 
         <dependency>
@@ -204,13 +220,13 @@
         <dependency>
             <groupId>com.formdev</groupId>
             <artifactId>jide-oss</artifactId>
-            <version>3.7.12</version>
+            <version>3.7.15</version>
         </dependency>
 
         <dependency>
             <groupId>es.blackleg</groupId>
             <artifactId>jlibnotify</artifactId>
-            <version>1.1.0</version>
+            <version>1.1.5</version>
             <exclusions>
                 <exclusion>
                     <groupId>net.java.dev.jna</groupId>
@@ -531,7 +547,7 @@
                 <executions>
                     <execution>
                         <id>compile</id>
-                        <phase>compile</phase>
+                        <phase>process-sources</phase>
                         <goals>
                             <goal>compile</goal>
                         </goals>
@@ -568,7 +584,7 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <release>${jdk.language.version}</release>
+                    <release>${jvm.target.version}</release>
                     <forceJavacCompilerUse>true</forceJavacCompilerUse>
                     <compilerArgs>
                         <arg>-Aproject=${project.groupId}/${project.artifactId}</arg>
@@ -731,16 +747,34 @@
                         <version>1.7.0</version>
                         <executions>
                             <execution>
-                                <id>download-ffmpeg-exe-aarch64-from-server</id>
+                                <id>download-ffmpeg-exe-amd64-from-server</id>
                                 <phase>package</phase>
                                 <goals>
                                     <goal>wget</goal>
                                 </goals>
                                 <configuration>
-                                    <url>https://s3.mvorg.de/res/dev/windows/64/bin/ffmpeg.zip</url>
+                                    <url>https://s3.mvorg.de/res/dev/windows/64/bin/ffmpeg_new.zip</url>
                                     <unpack>true</unpack>
-                                    <outputDirectory>${project.build.directory}/res/bin</outputDirectory>
-                                    <md5>eec52ae0359df126c5056bc21a652ac0</md5>
+                                    <outputDirectory>${project.build.directory}/res</outputDirectory>
+                                    <md5>ef173fd7a3b684c71e445702a8f510f3</md5>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>com.coderplus.maven.plugins</groupId>
+                        <artifactId>copy-rename-maven-plugin</artifactId>
+                        <version>1.0</version>
+                        <executions>
+                            <execution>
+                                <id>rename-file</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>rename</goal>
+                                </goals>
+                                <configuration>
+                                    <sourceFile>${project.build.directory}/res/ffmpeg/</sourceFile>
+                                    <destinationFile>${project.build.directory}/res/bin/</destinationFile>
                                 </configuration>
                             </execution>
                         </executions>
@@ -815,7 +849,7 @@
                                     <url>https://s3.mvorg.de/res/dev/windows/aarch64/ffmpeg.zip</url>
                                     <unpack>true</unpack>
                                     <outputDirectory>${project.build.directory}/res/bin</outputDirectory>
-                                    <md5>f5429db43834da7e58c88fd7baa05ce8</md5>
+                                    <md5>3812b8f3c99cf33278dad42a79bff973</md5>
                                 </configuration>
                             </execution>
                         </executions>
@@ -906,6 +940,24 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>com.coderplus.maven.plugins</groupId>
+                        <artifactId>copy-rename-maven-plugin</artifactId>
+                        <version>1.0</version>
+                        <executions>
+                            <execution>
+                                <id>rename-file</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <sourceFile>${project.basedir}/scripte/aria2-remote.sh</sourceFile>
+                                    <destinationFile>${project.build.directory}/res/bin/aria2-remote.sh</destinationFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-shade-plugin</artifactId>
                         <version>${maven-shade-plugin.version}</version>
@@ -985,6 +1037,24 @@
             <build>
                 <plugins>
                     <plugin>
+                        <groupId>com.coderplus.maven.plugins</groupId>
+                        <artifactId>copy-rename-maven-plugin</artifactId>
+                        <version>1.0</version>
+                        <executions>
+                            <execution>
+                                <id>rename-file</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>copy</goal>
+                                </goals>
+                                <configuration>
+                                    <sourceFile>${project.basedir}/scripte/aria2-remote.sh</sourceFile>
+                                    <destinationFile>${project.build.directory}/res/bin/aria2-remote.sh</destinationFile>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-shade-plugin</artifactId>
                         <version>${maven-shade-plugin.version}</version>
@@ -1026,6 +1096,7 @@
                 </os>
             </activation>
             <properties>
+                <jvm.target.version>21</jvm.target.version>
                 <javafx.platform>mac</javafx.platform>
             </properties>
             <dependencies>
@@ -1093,7 +1164,7 @@
                                 <configuration>
                                     <url>https://s3.mvorg.de/res/dev/mac/bin/intel/ffmpeg</url>
                                     <outputDirectory>${project.build.directory}/bin</outputDirectory>
-                                    <md5>89a30e6e2126216fa3a3339812d14eca</md5>
+                                    <md5>438891fe3a1077081aa400c1df18590c</md5>
                                 </configuration>
                             </execution>
                             <execution>
@@ -1105,7 +1176,7 @@
                                 <configuration>
                                     <url>https://s3.mvorg.de/res/dev/mac/bin/intel/ffprobe</url>
                                     <outputDirectory>${project.build.directory}/bin</outputDirectory>
-                                    <md5>0e2f20dacc9c81e9de742e5eae54637e</md5>
+                                    <md5>5226b0b358243c5757108e107dc546bf</md5>
                                 </configuration>
                             </execution>
                         </executions>
@@ -1232,7 +1303,7 @@
                                 <configuration>
                                     <url>https://s3.mvorg.de/res/dev/mac/bin/apple_silicon/ffmpeg</url>
                                     <outputDirectory>${project.build.directory}/bin</outputDirectory>
-                                    <md5>b286884d4ad306303b30e657606425a0</md5>
+                                    <md5>59529684989790fb73c956f813c9be13</md5>
                                 </configuration>
                             </execution>
                             <execution>
@@ -1244,7 +1315,7 @@
                                 <configuration>
                                     <url>https://s3.mvorg.de/res/dev/mac/bin/apple_silicon/ffprobe</url>
                                     <outputDirectory>${project.build.directory}/bin</outputDirectory>
-                                    <md5>b28d6e1dade2a1773513b86d23c74c13</md5>
+                                    <md5>cca2b80ca82a1fd6f96763ba2ecbe691</md5>
                                 </configuration>
                             </execution>
                         </executions>
@@ -1275,26 +1346,6 @@
                                         </transformer>
                                     </transformers>
                                 </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <artifactId>maven-assembly-plugin</artifactId>
-                        <version>${maven-assembly-plugin.version}</version>
-                        <configuration>
-                            <finalName>MediathekView-${project.version}-mac</finalName>
-                            <appendAssemblyId>false</appendAssemblyId>
-                            <descriptors>
-                                <descriptor>src/assembly/dep_mac.xml</descriptor>
-                            </descriptors>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>create-archive</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>single</goal>
-                                </goals>
                             </execution>
                         </executions>
                     </plugin>
